--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,18 @@ body{
 
 #welcome-section,#projects{
     width: 100%;
-    height: 500px;
+
 }
 #welcome-section{
     background-color: teal;
+    height: 100vh;
 }
 #projects{
     background-color: yellow;
+    height: 500px;
 }
+@media screen and (max-width: 1200px) {
+    body { color: crimson;
+    
+    }
+  }
